# tcs-backbone

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.rst  build.sh
cmake/: gtest.cmake  handy.cmake  protobuf.cmake
src/: CMakeLists.txt
src/common/: tcs_exception.h
src/proto/: packet.proto
src/protobuf/: packet.proto
src/transport/: address.cc  address.h  data.cc  data.h  loc_socket.cc  loc_socket.h  packet.cc  packet.h  tcs_socket.cc  tcs_socket.h  transport_config.cc  transport_config.h
src/utils/: logging.cc  logging.h
test/: CMakeLists.txt
test/transport/: tcs_socket_test.cc
test/utils/: logging_test.cc
tests/utils/: logging_test.cc
